# mavlink-telemetry-visualizer

./: CMakeLists.txt  README.md  config.json
include/common/: telemetry_types.h
include/history/: history_manager.h
include/model/: telemetry_model.h
include/parser/: mavlink_parser.h
include/transport/: udp_transport.h
include/ui/: chart_widget.h  main_window.h
src/: main.cpp
src/common/: config.cpp  config.h
src/history/: history_manager.cpp
src/model/: telemetry_model.cpp
src/parser/: mavlink_parser.cpp
src/transport/: udp_transport.cpp
src/ui/: chart_widget.cpp  main_window.cpp
